--- a/logik-frontend/styles/styles-global.css
+++ b/logik-frontend/styles/styles-global.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+  
 .padding-0 {
     padding: 0;
 }
@@ -7,15 +11,18 @@
     font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6, p {
     margin-bottom: 0;
-    font-weight: 700;
     letter-spacing: 0px;
+}
+
+h1 {
+    font-weight: 700;
     color: #000000;
     opacity: 0.75;
 }
 
-h2 {
+.navlink-font {
     margin-bottom: 0;
     font-weight: 500;
     letter-spacing: 0px;
@@ -23,14 +30,46 @@ h2 {
     opacity: 0.5;
 }
 
+h6 {
+    font-weight: 700;
+    color: #FF5D58;
+    opacity: 1;
+}
+
+h2 {
+    font-weight: 500;
+    color: #000000;
+    opacity: 1;
+}
+
+p {
+    font-weight: 400;
+    color: #000000;
+    opacity: 0.5;
+}
+
+/* --- MEDIA QUERIES ---*/
 @media only screen and (max-width: 575px) {
     h1 {
         font-size: 15px;
     }
 
-    h2 {
+    .navlink-font {
         font-size: 10px;
     }
+
+    h6 {
+        font-size: 10px;
+    }
+    
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 10px;
+    }
+}
 }
 
 @media only screen and (min-width: 576px) {
@@ -38,7 +77,19 @@ h2 {
         font-size: 20px;
     }
 
-    h2 {
+    .navlink-font {
         font-size: 13px;
+    }
+
+    h6 {
+        font-size: 14px;
+    }
+    
+    h2 {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 14px;
     }
 }
