feat: Added about page for desktop and laptop view

--- a/logik-frontend/styles/styles-global.css
+++ b/logik-frontend/styles/styles-global.css
@@ -47,6 +47,10 @@ p {
     opacity: 0.5;
 }
 
+.about-description p {
+    opacity: 1;
+}
+
 /* --- MEDIA QUERIES ---*/
 @media only screen and (max-width: 575px) {
     h1 {
