--- a/logik-frontend/styles/styles-homepage-circles.css
+++ b/logik-frontend/styles/styles-homepage-circles.css
@@ -4,15 +4,15 @@
     opacity: 50%;
 }
 
-.circle-red {
+.circle--red {
     background-color: #FF5D58;
 }
 
-.circle-yellow {
+.circle--yellow {
     background-color: #F8D15B;
 }
 
-.circle-green {
+.circle--green {
     background-color: #47BDB7;
 }
 
@@ -24,17 +24,17 @@
         width: 100px;
     }
 
-    .circle-red {
+    .circle--red {
         left: 83%;
         top: -8%;
     }
     
-    .circle-yellow {
+    .circle--yellow {
         left: -17%;
         top: 78%;
     }
     
-    .circle-green {
+    .circle--green {
         display: none;
     }
 }
@@ -46,17 +46,17 @@
         width: 200px;
     }
 
-    .circle-red {
+    .circle--red {
         left: 90%;
         top: -80px;
     }
     
-    .circle-yellow {
+    .circle--yellow {
         left: -12%;
         top: 780px;
     }
     
-    .circle-green {
+    .circle--green {
         left: 30%;
         top: 180px;
     }
@@ -69,17 +69,17 @@
         width: 200px;
     }
 
-    .circle-red {
+    .circle--red {
         left: 90%;
         top: -80px;
     }
     
-    .circle-yellow {
+    .circle--yellow {
         left: -5%;
         top: calc(768px - 139px);
     }
     
-    .circle-green {
+    .circle--green {
         left: 46.6%;
         top: 260px;
     }
@@ -92,17 +92,17 @@
         width: 200px;
     }
 
-    .circle-red {
+    .circle--red {
         left: 92vw;
         top: -80px;
     }
     
-    .circle-yellow {
+    .circle--yellow {
         left: -5%;
         top: calc(979px - 139px); /* 840px; */
     }
     
-    .circle-green {
+    .circle--green {
         left: 47.3%;
         top: 370px;
     }
