--- a/destination-frontend/static/css/global.css
+++ b/destination-frontend/static/css/global.css
@@ -13,11 +13,11 @@
 }
 
 html {
-    font-family: 'Georgia', sans-serif;
+    font-family: 'Georgia', serif;
 }
 
 body {
-    font-family: 'Georgia', sans-serif;
+    font-family: 'Georgia', serif;
     background-color: white;
     width: 100%;
 }
@@ -49,7 +49,7 @@ body {
 }
 
 .carousel-control-prev, .carousel-control-next{
-    width: 5%;
+    width: 4%;
 }
 
 .content-container {
@@ -82,7 +82,7 @@ body {
     color: white;
     opacity: 0.7;
     font-size: 20px;
-    font-weight: lighter;
+    font-weight: 100;
     padding-left: 25px;
     padding-top: 20px;
 }
@@ -103,9 +103,24 @@ body {
     border: 1px solid white;
     margin-left: 25px;
     margin-top: 20px;
+    transition: ease-in-out, 0.4s;
+    color: white;
+}
+
+.content-container .btn-style:hover {
+    background-color: white;
+    color: black;
 }
 
 .content-container .btn-text {
     font-size: 16px;
     color: white;
+}
+
+.content-container .btn-text:hover {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
 }
