--- a/logik-frontend/styles/styles-contactpage.css
+++ b/logik-frontend/styles/styles-contactpage.css
@@ -42,6 +42,11 @@ input[type=button], input[type=submit], input[type=reset] {
 @media only screen and (max-width: 575px) {
     .contactpage-container {
         height: 568px;
+        padding-top: 44px;
+    }
+
+    .connect-container {
+        margin: 0px 12px 12px 12px;
     }
 
     input[type=personal-info], select {
@@ -70,6 +75,7 @@ input[type=button], input[type=submit], input[type=reset] {
 @media only screen and (min-width: 576px) and (max-width: 1199px) {
     .contactpage-container {
         height: 800px;
+        padding-top: 60px;
     }
 
     .connect-container {
@@ -84,6 +90,7 @@ input[type=button], input[type=submit], input[type=reset] {
 @media only screen and (min-width: 1200px) and (max-width: 1366px) {
     .contactpage-container {
         height: 800px;
+        padding-top: 60px;
     }
 
     .connect-container {
@@ -98,6 +105,7 @@ input[type=button], input[type=submit], input[type=reset] {
 @media only screen and (min-width: 1367px) {
     .contactpage-container {
         height: 916px;
+        padding-top: 60px;
     }
 
     .connect-container {
