--- a/logik-frontend/styles/styles-contactpage-triangles.css
+++ b/logik-frontend/styles/styles-contactpage-triangles.css
@@ -21,6 +21,14 @@
         border-right: 22px solid transparent;
         bottom: 0px;
     }
+
+    .triangle--green {
+        width: 0;
+        height: 0;
+        border-bottom: 180px solid #47BDB7;
+        border-right: 180px solid transparent;
+        bottom: 0px;
+    }
 }
 
 /* TABLET */
@@ -40,6 +48,14 @@
         border-right: 58px solid transparent;
         bottom: 0px;
     }
+
+    .triangle--green {
+        width: 0;
+        height: 0;
+        border-bottom: 200px solid #47BDB7;
+        border-right: 200px solid transparent;
+        bottom: 0px;
+    }
 }
 
 /* LAPTOP AND DESKTOP */
@@ -57,6 +73,14 @@
         height: 0;
         border-bottom: 58px solid #FF5D58;
         border-right: 58px solid transparent;
+        bottom: 0px;
+    }
+
+    .triangle--green {
+        width: 0;
+        height: 0;
+        border-bottom: 200px solid #47BDB7;
+        border-right: 200px solid transparent;
         bottom: 0px;
     }
 }
