--- a/logik-frontend/styles/styles-contactpage.css
+++ b/logik-frontend/styles/styles-contactpage.css
@@ -1,6 +1,3 @@
-.contactpage-container .row {
-    height: 100%;
-}
 
 .connect-container .content {
     padding: 12px;
@@ -21,7 +18,7 @@ input[type=personal-info], select {
 
 input[type=message], select {
     width: 100%;
-    height: 320px;
+    height: 200px;
     padding: 11px;
     margin-top: 20px;
     box-shadow: 0px 0px 15px #00000029;
@@ -37,16 +34,34 @@ input[type=button], input[type=submit], input[type=reset] {
     margin-top: 20px;
 }
 
+.socialmds-container .row {
+    height: 20%;
+}
+
+.hero-icon--2 {
+    position: absolute;
+    left: 240px;
+    top: -20px;
+}
+
+.socialmds-container img {
+    margin-left: 20px;
+    margin-right: 30%;
+}
+
 /* --- MEDIA QUERIES ---*/
 /* MOBILE */
 @media only screen and (max-width: 575px) {
     .contactpage-container {
-        height: 568px;
+        height: 1050px;
         padding-top: 44px;
     }
 
     .connect-container {
-        margin: 0px 12px 12px 12px;
+        width: 272px;
+        margin-top: 28px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     input[type=personal-info], select {
@@ -55,7 +70,7 @@ input[type=button], input[type=submit], input[type=reset] {
     }
     
     input[type=message], select {
-        height: 192px;
+        height: 168px;
         padding: 11px;
         margin-top: 12px;
     }
@@ -69,6 +84,18 @@ input[type=button], input[type=submit], input[type=reset] {
         padding: 12px 36px;
         margin-top: 18px;
     }
+
+    .hero-icon--2 {
+        display: none;
+    }
+
+    .socialmds-container {
+        width: 240px;
+        height: 308px;
+        margin-top: 84px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 /* TABLET */
@@ -80,24 +107,39 @@ input[type=button], input[type=submit], input[type=reset] {
 
     .connect-container {
         width: 348px;
-        height: 516px;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .socialmds-container {
+        width: 272px;
+        height: 308px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+
+    .hero-icon--2 {
+        display: none;
     }
 }
 
 /* LAPTOP */
 @media only screen and (min-width: 1200px) and (max-width: 1366px) {
     .contactpage-container {
-        height: 800px;
+        height: 718px;
         padding-top: 60px;
     }
 
     .connect-container {
         width: 348px;
-        height: 516px;
         margin-left: auto; 
         margin-right: 24px;
+    }
+
+    .socialmds-container {
+        width: 272px;
+        height: 308px;
     }
 }
 
@@ -110,8 +152,12 @@ input[type=button], input[type=submit], input[type=reset] {
 
     .connect-container {
         width: 348px;
-        height: 516px;
         margin-left: auto; 
         margin-right: 24px;
+    }
+
+    .socialmds-container {
+        width: 272px;
+        height: 308px;
     }
 }
