--- a/logik-frontend/styles/styles-contactpage.css
+++ b/logik-frontend/styles/styles-contactpage.css
@@ -1,4 +1,3 @@
-
 .connect-container .content {
     padding: 12px;
 }
@@ -53,7 +52,7 @@ input[type=button], input[type=submit], input[type=reset] {
 /* MOBILE */
 @media only screen and (max-width: 575px) {
     .contactpage-container {
-        height: 1050px;
+        height: 950px;
         padding-top: 44px;
     }
 
@@ -102,7 +101,10 @@ input[type=button], input[type=submit], input[type=reset] {
 @media only screen and (min-width: 576px) and (max-width: 1199px) {
     .contactpage-container {
         height: 800px;
-        padding-top: 60px;
+    }
+
+    .contactpage-container > .row {
+        height: 100%;
     }
 
     .connect-container {
@@ -116,8 +118,7 @@ input[type=button], input[type=submit], input[type=reset] {
         height: 308px;
         margin-left: auto;
         margin-right: auto;
-    }
-    
+    }   
 
     .hero-icon--2 {
         display: none;
@@ -127,8 +128,12 @@ input[type=button], input[type=submit], input[type=reset] {
 /* LAPTOP */
 @media only screen and (min-width: 1200px) and (max-width: 1366px) {
     .contactpage-container {
-        height: 718px;
-        padding-top: 60px;
+        height: 668px;
+        padding-top: 32px;
+    }
+
+    .contactpage-container > .row {
+        height: 100%;
     }
 
     .connect-container {
@@ -146,8 +151,11 @@ input[type=button], input[type=submit], input[type=reset] {
 /* DESKTOP SCREEN SIZE */
 @media only screen and (min-width: 1367px) {
     .contactpage-container {
-        height: 916px;
-        padding-top: 60px;
+        height: 879px;
+    }
+
+    .contactpage-container > .row {
+        height: 100%;
     }
 
     .connect-container {
