--- a/logik-frontend/styles/styles-global.css
+++ b/logik-frontend/styles/styles-global.css
@@ -21,23 +21,27 @@ h1 {
     opacity: 0.75;
 }
 
-.navlink-font {
-    margin-bottom: 0;
+h2 {
     font-weight: 500;
-    letter-spacing: 0px;
     color: #000000;
-    opacity: 0.5;
+    opacity: 1;
+}
+
+h3 {
+    font-weight: 400;
+    color: #FFFFFF;
+    opacity: 0.7;
+}
+
+h5 {
+    font-weight: 500;
+    color: #075E63;
+    opacity: 1;
 }
 
 h6 {
     font-weight: 700;
     color: #FF5D58;
-    opacity: 1;
-}
-
-h2 {
-    font-weight: 500;
-    color: #000000;
     opacity: 1;
 }
 
@@ -47,10 +51,17 @@ p {
     opacity: 0.5;
 }
 
+.navlink-font {
+    margin-bottom: 0;
+    font-weight: 500;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 0.5;
+}
+
 .about-description p {
     opacity: 1;
 }
-
 
 ::-webkit-input-placeholder {
     color: #000000;
@@ -80,39 +91,36 @@ p {
     opacity: 0.5;
 }
 
-h5 {
-    font-weight: 500;
-    color: #075E63;
-    opacity: 1;
-}
-
-h3 {
-    font-weight: 400;
-    color: #FFFFFF;
-    opacity: 0.7;
-}
-
 /* --- MEDIA QUERIES ---*/
+/* MOBILE */
 @media only screen and (max-width: 575px) {
     h1 {
         font-size: 15px;
     }
 
-    .navlink-font {
-        font-size: 10px;
+    h2 {
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 12px;
+    }
+
+    h5 {
+        font-size: 12px;
     }
 
     h6 {
         font-size: 10px;
     }
-    
-    h2 {
-        font-size: 20px;
-    }
 
     p {
         font-size: 10px;
     }
+
+    .navlink-font {
+        font-size: 10px;
+    } 
 
     .contactpage-container h2 {
         font-size: 15px;
@@ -133,35 +141,36 @@ h3 {
     ::-moz-placeholder {
         font-size: 12px;
     }
-
-    h5 {
-        font-size: 12px;
-    }
-
-    h3 {
-        font-size: 12px;
-    }
 }
 
+/* TABLET, LAPTOPS, DESKTOPS */
 @media only screen and (min-width: 576px) {
     h1 {
         font-size: 20px;
     }
 
-    .navlink-font {
-        font-size: 13px;
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 14px;
+    }
+
+    h5 {
+        font-size: 14px;
     }
 
     h6 {
         font-size: 14px;
     }
-    
-    h2 {
-        font-size: 30px;
-    }
 
     p {
         font-size: 14px;
+    }
+
+    .navlink-font {
+        font-size: 13px;
     }
   
     ::-webkit-input-placeholder {
@@ -178,13 +187,5 @@ h3 {
     
     ::-moz-placeholder {
         font-size: 16px;
-    }
-
-    h5 {
-        font-size: 14px;
-    }
-
-    h3 {
-        font-size: 14px;
-    }
+    } 
 }
